// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaginationContainer styles when the current page is 1 should render with default styles 1`] = `
.circuit-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 12px;
}

.circuit-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 5px;
  border-width: 1px;
  border-style: solid;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  background-color: #3388FF;
  border-color: #3388FF;
  color: #FFFFFF;
  padding: 4px calc(16px - 1px);
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-right: 0;
}

.circuit-1:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-1:focus::-moz-focus-inner {
  border: 0;
}

.circuit-1:disabled,
.circuit-1[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1:hover {
  background-color: #1760CE;
  border-color: #1760CE;
}

.circuit-1:active {
  background-color: #003C8B;
  border-color: #003C8B;
}

.circuit-1:hover {
  box-shadow: 1px 0 0 #9DA7B1;
  z-index: 1;
}

.circuit-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 5px;
  border-width: 1px;
  border-style: solid;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  background-color: #3388FF;
  border-color: #3388FF;
  color: #FFFFFF;
  padding: 4px calc(16px - 1px);
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.circuit-3:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-3:focus::-moz-focus-inner {
  border: 0;
}

.circuit-3:disabled,
.circuit-3[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-3:hover {
  background-color: #1760CE;
  border-color: #1760CE;
}

.circuit-3:active {
  background-color: #003C8B;
  border-color: #003C8B;
}

<div
  class="circuit-4 circuit-5"
>
  <button
    class="circuit-0 circuit-1"
    data-testid="pagination-button-previous"
    disabled=""
  />
  Children Element
  <button
    class="circuit-2 circuit-3"
    data-testid="pagination-button-next"
  />
</div>
`;

exports[`PaginationContainer styles when the current page is not the first and last page should render with default styles 1`] = `
.circuit-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 12px;
}

.circuit-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 5px;
  border-width: 1px;
  border-style: solid;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  background-color: #3388FF;
  border-color: #3388FF;
  color: #FFFFFF;
  padding: 4px calc(16px - 1px);
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-right: 0;
}

.circuit-1:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-1:focus::-moz-focus-inner {
  border: 0;
}

.circuit-1:disabled,
.circuit-1[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1:hover {
  background-color: #1760CE;
  border-color: #1760CE;
}

.circuit-1:active {
  background-color: #003C8B;
  border-color: #003C8B;
}

.circuit-1:hover {
  box-shadow: 1px 0 0 #9DA7B1;
  z-index: 1;
}

.circuit-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 5px;
  border-width: 1px;
  border-style: solid;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  background-color: #3388FF;
  border-color: #3388FF;
  color: #FFFFFF;
  padding: 4px calc(16px - 1px);
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.circuit-3:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-3:focus::-moz-focus-inner {
  border: 0;
}

.circuit-3:disabled,
.circuit-3[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-3:hover {
  background-color: #1760CE;
  border-color: #1760CE;
}

.circuit-3:active {
  background-color: #003C8B;
  border-color: #003C8B;
}

<div
  class="circuit-4 circuit-5"
>
  <button
    class="circuit-0 circuit-1"
    data-testid="pagination-button-previous"
  />
  Children Element
  <button
    class="circuit-2 circuit-3"
    data-testid="pagination-button-next"
  />
</div>
`;

exports[`PaginationContainer styles when the current page is the last page should render with default styles 1`] = `
.circuit-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 12px;
}

.circuit-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 5px;
  border-width: 1px;
  border-style: solid;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  background-color: #3388FF;
  border-color: #3388FF;
  color: #FFFFFF;
  padding: 4px calc(16px - 1px);
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-right: 0;
}

.circuit-1:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-1:focus::-moz-focus-inner {
  border: 0;
}

.circuit-1:disabled,
.circuit-1[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1:hover {
  background-color: #1760CE;
  border-color: #1760CE;
}

.circuit-1:active {
  background-color: #003C8B;
  border-color: #003C8B;
}

.circuit-1:hover {
  box-shadow: 1px 0 0 #9DA7B1;
  z-index: 1;
}

.circuit-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 5px;
  border-width: 1px;
  border-style: solid;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  background-color: #3388FF;
  border-color: #3388FF;
  color: #FFFFFF;
  padding: 4px calc(16px - 1px);
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.circuit-3:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-3:focus::-moz-focus-inner {
  border: 0;
}

.circuit-3:disabled,
.circuit-3[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-3:hover {
  background-color: #1760CE;
  border-color: #1760CE;
}

.circuit-3:active {
  background-color: #003C8B;
  border-color: #003C8B;
}

<div
  class="circuit-4 circuit-5"
>
  <button
    class="circuit-0 circuit-1"
    data-testid="pagination-button-previous"
  />
  Children Element
  <button
    class="circuit-2 circuit-3"
    data-testid="pagination-button-next"
    disabled=""
  />
</div>
`;
